# mcpo

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: build-release.yml  docker-build.yaml
src/mcpo/: __init__.py  main.py
src/mcpo/tests/: test_main.py
src/mcpo/utils/: auth.py  main.py
tests/: test_main.py
